Rename public folder to docs for github deployment

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Boilerplate",
-    "name": "React Redux Boilerplate (JavaScript Edition)",
+    "short_name": "OpenSourceCS",
+    "name": "Open Source CS Degree",
     "start_url": "/",
     "background_color": "#000000",
     "theme_color": "#000000",
