--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:dev_Webpack": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
     "css-loader": "^0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "gh-pages": "^3.1.0",
     "nodemon": "^1.19.1",
     "normalize.css": "^7.0.0",
     "raf": "^3.3.2",
